# Quantitative-trading-simulation-base-ESG-project-

./: .dockerignore  .env.example  .env.quant_rl.example  .gitattributes  .gitignore  API_ENDPOINTS.md  API安全加固完成报告.md  DATA_SOURCE_REPLACEMENT_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENHANCEMENT_PLAN.md  ESG Quant System Architecture.docx  IMPLEMENTATION_SUMMARY.md  P2.2_统一错误处理完成报告.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_START.md  README.md  README_CN.md  SCHEDULER_README.md  _api_server.cmd  _ui_server.cmd  blueprint_runtime.py  demo_scheduler.py  docker-compose.5090.yml  docker-compose.yml  esg_quant_landing.html  esg_quant_landing_v2.html  gen_docx.py  market_depth_integration_test_report.md  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  railway.toml  requirements-quant-rl.txt  requirements.txt  schedule.py  (+28 more)
.claude/: settings.json  settings.local.json
agents/: __init__.py  autonomous_research_agent.py  event_agent.py  macro_agent.py  report_agent.py  research_agent.py  risk_agent.py  router_agent.py  strategy_agent.py
analysis/: __init__.py
api/: __init__.py  include_quant_rl.py  main.py  routes_quant_rl.py  schemas_quant_rl.py
backtest/: __init__.py  alpaca_paper_trading.py  backtest_engine.py  counterfactual_analysis.py  monte_carlo.py  performance_attribution.py  transaction_cost_model.py  walk_forward.py
config/: __init__.py  api_keys.yaml  logging_config.yaml  settings.py
configs/: config.py  promotion_policy.paper.json  rag_quality_samples.json
data/: __init__.py
database/: supabase_client.py
deploy/: README.md  nginx.conf
docs/: API_ENDPOINTS.md  BLUEPRINT_PRODUCTIONIZATION_AUDIT.md  BROKER_KEYS_AND_PROD_GAPS_ZH.md  CLOUD_5090_DEPLOYMENT_ZH.md  CLOUD_TRAINING_ASSETS_ZH.md  DATA_SOURCE_REPLACEMENT_GUIDE.md  DEPLOYMENT_GUIDE.md  ENV_TRAINING_CHECKLIST_ZH.md  ESG_QUANT_SYSTEM_ARCHITECTURE_EXTRACT.txt  ESG_RL_2022_2025_RUNBOOK.md  LOCAL_HYBRID_RUNBOOK.md  LOCAL_HYBRID_RUNBOOK_ZH.md  MULTIAGENT_ROADMAP.md  OPENBAYES_UPLOAD_ZH.md  P0_ALPHA_RANKER_COLAB_ZH.md  P1_STACK_DELIVERY_ZH.md  P2_DECISION_DELIVERY_ZH.md  PAPER_CLOUD_CPU_RUNBOOK_ZH.md  PRODUCT_DELIVERY_CHECKLIST_ZH.md  QUANT_SCHEDULER_DEPLOYMENT_ZH.md  REMOTE_GPU_RUNBOOK.md  STAGE2_DATA_QUALITY_PROTOCOL.md  STAGING_RELEASE_RUNBOOK.md  api_reference.md  architecture_v2.md  introduction.py  linkedin_architecture_post_zh.md  real-external-closure-runbook.md  sci_paper_roadmap.md
e2e/: all-click-contract.spec.js  landing-i18n.spec.js  (+12 more)
(+626 files in other folders)
