
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esg-quant-intelligence"
version = "0.1.0"
description = "Industrial ESG Quant platform with Agent research, backtesting, reporting, Supabase metadata, and R2 artifacts."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ESG Quant IO Team" }
]
dependencies = [
  "fastapi>=0.104.1,<0.111",
  "uvicorn>=0.24,<0.30",
  "httpx>=0.27,<0.28",
  "pydantic>=2.8,<3",
  "python-dotenv>=1.0,<2",
  "pandas>=2.1.3,<2.3",
  "numpy>=1.24.3,<2.1",
  "scikit-learn>=1.3.2,<1.6",
  "joblib>=1.3.2,<2",
  "matplotlib>=3.8,<4",
  "requests>=2.31,<3",
  "aiohttp>=3.9,<4",
  "schedule>=1.2,<2",
  "apscheduler>=3.10,<4",
  "tenacity>=8.2,<9",
  "websockets>=12,<13",
  "python-multipart>=0.0.6,<1",
  "boto3>=1.34,<2",
  "jinja2>=3.1,<4",
  "plotly>=5.24,<6",
  "python-json-logger>=2,<3",
  "supabase>=2.4,<3",
  "psycopg2-binary>=2.9.10,<3",
  "yfinance>=0.2.40,<0.3",
  "pandas-market-calendars>=4.4.1,<5",
  "qdrant-client>=1.7,<2",
]

[project.optional-dependencies]
rag = [
  "llama-index>=0.10.58,<0.11",
  "llama-index-vector-stores-qdrant>=0.2.0,<0.3",
  "llama-index-retrievers-bm25>=0.3.0,<0.4",
  "llama-index-postprocessor-flag-embedding-reranker>=0.1.3,<0.2",
  "sentence-transformers>=5.0,<6",
  "openai>=1.12,<2",
  "anthropic>=0.23,<1",
  "langchain>=0.2,<0.3",
  "langchain-core>=0.2,<0.3",
  "langgraph>=0.2,<0.3",
  "rouge-score>=0.1.2,<0.2",
  "pypdf>=4.2,<5",
]
training = [
  "torch>=2.1.1,<2.4",
  "transformers>=4.57,<5",
  "peft>=0.9,<1",
  "sentencepiece>=0.2,<0.3",
  "datasets>=2.16,<3",
  "accelerate>=0.27,<1",
  "xgboost>=2.0,<3",
  "lightgbm>=4.3,<5",
  "catboost>=1.2.8,<2",
  "optuna>=3.6,<4",
]
dev = [
  "pytest>=7.4.3,<9",
  "pytest-asyncio>=0.21.1,<1",
  "black>=23.12,<25",
  "pylint>=3.0,<4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
